# spell-checker

./: README.md  pyproject.toml  tasks.py
dokumentaatio/: käyttöohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikkoraportti_1.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md
src/: damerau_levenshtein.py  index.py  main.py  trie.py  trie_manager.py
src/data/: test_vocabulary.txt
src/tests/: trie_manager_test.py  trie_test.py
