[tool.poetry]
name = "algolabra2025"
version = "0.1.0"
description = ""
authors = ["isabel <isabel.suorsa@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"

[tool.poetry.dev-dependencies]
pylint = "^3.3.4"
pytest = "^8.3.4"
coverage = "^7.6.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
